--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8,19 +8,19 @@
   --header-height: 3rem;
   /*========== Colors ==========*/
   /* Change favorite color */
-  --hue-color: 250;
+  --hue-color: 150;
   /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
   /* HSL color mode */
-  --first-color: hsl(var(--hue-color), 69%, 61%);
-  --first-color-second: hsl(var(--hue-color), 69%, 61%);
-  --first-color-alt: hsl(var(--hue-color), 57%, 53%);
-  --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
-  --title-color: hsl(var(--hue-color), 8%, 15%);
-  --text-color: hsl(var(--hue-color), 8%, 45%);
-  --text-color-light: hsl(var(--hue-color), 8%, 65%);
+  --first-color: yellow;
+  --first-color-second: yellow;
+  --first-color-alt: yellow;
+  --first-color-lighter: yellow;
+  --title-color: white;
+  --text-color: white;
+  --text-color-light: white;
   --input-color: hsl(var(--hue-color), 70%, 96%);
-  --body-color: hsl(var(--hue-color), 60%, 99%);
-  --container-color: #fff;
+  --body-color: yellow;
+  --container-color: blue;
   --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
   --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
@@ -75,8 +75,8 @@ body.dark-theme {
   --title-color: hsl(var(--hue-color), 8%, 95%);
   --text-color: hsl(var(--hue-color), 8%, 75%);
   --input-color: hsl(var(--hue-color), 29%, 16%);
-  --body-color: hsl(var(--hue-color), 28%, 12%);
-  --container-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: yellow;
+  --container-color: yellow;
   --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
   --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
 }
@@ -121,7 +121,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: var(--title-color);
+  color: blue;
   font-weight: var(--font-semi-bold);
 }
 
@@ -152,6 +152,7 @@ img {
 
 .section {
   padding: 2rem 0 4rem;
+  color: black;
 }
 
 .section__title {
@@ -175,6 +176,7 @@ img {
   max-width: 768px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
+  color: #000;
 }
 
 .grid {
